# belo-horizonte-pricing

./: .env  .gitignore  .pre-commit-config.yaml  EDA.ipynb  Makefile  README.md  docker-compose.yaml  old.docker-compose.yaml  pyproject.toml  samconfig.toml  template.yaml  tutorial.md
belo_horizonte_estate_pricing/: main.py
dags/: auto_training.py
data/: data_07_2024.csv  data_synthetic.csv
docker/mlflow/: requirements.txt
docs/: tutorial.md
events/: prediction.json
lambdas/prepare-dataset/: Dockerfile
lambdas/prepare-dataset/events/: event.json
lambdas/prepare-dataset/src/: lambda.py
lambdas/promote-model/: Dockerfile
lambdas/promote-model/src/: lambda.py
lambdas/serve/: main.py  requirements.txt
lambdas/serve-model/: main.py  requirements.txt
lambdas/serve-model/src/: lambda.py
lambdas/serve/src/: lambda.py
lambdas/train-model/: requirements.txt
lambdas/train-model/src/: lambda.py
mlflow/: Dockerfile  requirements.txt
mlruns/0/: meta.yaml
notebooks/: EDA.ipynb  Run experiments.ipynb
src/: Dockerfile  lambda.Dockerfile  lambda.py  main.py  requirements.txt
src/lambdas/serve-model/: Dockerfile
src/lambdas/serve-model/src/: lambda.py
tests/: test_dataset.py  test_serve.py
tests/fixtures/: test_dataset.csv
tests/fixtures/model/: MLmodel  model.pkl
